--- a/YS_BDCMotor/TIM1/gpio.uvprojx
+++ b/YS_BDCMotor/TIM1/gpio.uvprojx
@@ -184,7 +184,6 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
-            <RvdsMve>0</RvdsMve>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -401,6 +400,11 @@
               <FileName>BDCMOTOR.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\User\BDCMOTOR.c</FilePath>
+            </File>
+            <File>
+              <FileName>key.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\key.c</FilePath>
             </File>
           </Files>
         </Group>
